<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mini Stockbit</string>

    <string name="do_not_have_an_account">Belum punya akun?</string>
    <string name="enter">Masuk</string>
    <string name="enter_with_facebook">Masuk dengan Facebook</string>
    <string name="enter_with_fingerprint">Masuk dengan Fingerprint</string>
    <string name="enter_with_google">Masuk dengan Google</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="login">Login</string>
    <string name="or">Atau</string>
    <string name="password">Password</string>
    <string name="register_now">Daftar Sekarang</string>
    <string name="username_email">Username or Email</string>

    <string name="chat">Chat</string>
    <string name="portfolio">Portfolio</string>
    <string name="search">Search</string>
    <string name="stream">Stream</string>
    <string name="watchlist">Watchlist</string>

</resources>