<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="id.stockbit.app.base.BaseViewModel.UiMode" />

        <variable
            name="vm"
            type="id.stockbit.app.ui.login.LoginViewModel" />

        <variable
            name="biometricEnabled"
            type="Boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme.Light">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:background="?attr/colorPrimary"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:text="@string/enter" />

                <androidx.appcompat.widget.AppCompatImageView
                    style="@style/CircularItemClickable"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="16dp"
                    android:padding="6dp"
                    app:srcCompat="@drawable/ic_svg_customer_support" />

            </FrameLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/container_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/ItemClickable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white_outline_light_gray_rounded_8"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="12dp"
                    android:text="@string/enter_with_google"
                    app:drawableStartCompat="@drawable/ic_svg_google" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/ItemClickable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white_outline_light_gray_rounded_8"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="12dp"
                    android:text="@string/enter_with_facebook"
                    app:drawableStartCompat="@drawable/ic_svg_facebook" />

            </androidx.cardview.widget.CardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/colorLightGray" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/colorWhite"
                    android:paddingHorizontal="12dp"
                    android:text="@string/or"
                    android:textColor="@color/colorGray" />

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/selector_edit_text"
                android:hint="@string/username_email"
                android:imeOptions="actionNext"
                android:paddingHorizontal="8dp"
                android:singleLine="true"
                android:text="@={vm.textEmail}"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/selector_edit_text"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingHorizontal="8dp"
                    android:text="@={vm.textPassword}"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/proxima_nova_bold"
                android:onClick="@{()-> vm.clickForgotPassword()}"
                android:text="@string/forgot_password"
                android:textColor="@color/colorGreen"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:cardBackgroundColor="@color/colorGreen"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/ItemClickable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:gravity="center"
                    android:onClick="@{()-> vm.clickLogin()}"
                    android:paddingVertical="14dp"
                    android:text="@string/login"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:visibility="@{vm.uiMode == UiMode.ON_PROGRESS ? View.VISIBLE : View.GONE, default=`gone`}"
                    tools:visibility="visible">

                    <ProgressBar
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="40dp"
                        android:indeterminateTint="@color/colorWhite" />

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:theme="@style/AppTheme.MaterialCard"
                android:visibility="@{biometricEnabled ? View.VISIBLE : View.GONE, default=`gone`}"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/colorGreen"
                app:strokeWidth="1dp"
                tools:visibility="visible">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/ItemClickable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:gravity="center"
                    android:onClick="@{()-> vm.clickBiometric()}"
                    android:paddingVertical="14dp"
                    android:text="@string/enter_with_fingerprint"
                    android:textColor="@color/colorGreen" />

            </com.google.android.material.card.MaterialCardView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/container_login">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/proxima_nova_bold"
                android:text="@string/do_not_have_an_account"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_bold"
                android:onClick="@{()-> vm.clickRegister()}"
                android:text="@string/register_now"
                android:textColor="@color/colorGreen"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>